# hamming_codes

./: Cargo.toml
src/: bits.rs  encoding.rs  lib.rs  main.rs
