[package]
name = "hamming"
version = "0.1.0"
edition = "2021"
default-run = "hamming"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.8.5"
encoding_rs = "0.8.31"

[dev-dependencies]
rstest = "0.18.2"

[[bin]]
name = "search"
path = "src/bin/search.rs"


[[bin]]
name = "hamming"
path = "src/bin/main.rs"
